<resources>
    <string name="app_name">Personas</string>
    <string name="registrar_usuario">REGISTRAR USUARIO</string>
    <string name="modificar_usuario">MODIFICAR USUARIO</string>
    <string name="registrar__usuario">Registrar Usuario</string>
    <string name="dui">DUI</string>
    <string name="nombre">Nombre</string>
    <string name="Registro">REGISTRAR</string>
    <string name="Dui">DUI</string>
    <string name="buscar">BUSCAR</string>
    <string name="nombre2">Nombre</string>
    <string name="actualizar">ACTUALIZAR</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="limpiar">LIMPIAR</string>
</resources>
