<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henriquez.personas.ModificarActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LL1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtidM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Dui"/>

        <Button
            android:id="@+id/btnmodificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL2"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txtnombreM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/nombre"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LL3"
        android:layout_marginTop="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnactualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizar"/>

        <Button
            android:id="@+id/btneliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar"/>

        <Button
            android:id="@+id/btnlimpiar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limpiar"/>

    </LinearLayout>

</LinearLayout>
