<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.henriquez.personas.RegistrarActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrar__usuario"
        android:textSize="30dp"
        android:textColor="@color/colorBlack"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/txtid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dui"
        android:textSize="15dp"
        android:layout_marginBottom="10dp"/>

    <EditText
        android:id="@+id/txtnombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre"
        android:textSize="15dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnregistrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Registro"/>

</LinearLayout>
